<resources>

    <string name="app_name">Roadeo</string>

    <!-- Nom pages -->
    <string name="nom_page_connexion">Connexion</string>
    <string name="nom_page_creation_compte">"Création d'un compte"</string>

    <!-- Titre onglet -->
    <string-array name="onglets">
        <item name="onglet_liste">Liste des randonnées</item>
        <item name="onglet_liste">Paramètre de la randonnée</item>
        <item name="onglet_carte">Carte</item>
    </string-array>

    <!-- option menu burger -->
    <string name="option_menu_dashboard">Menu principal</string>
    <string name="option_menu_compte_utilisateur">Compte utilisateur</string>

    <!-- Lié aux informations du compte -->
    <string name="label_compte_nom">Nom</string>
    <string name="label_compte_prenom">Prenom</string>
    <string name="label_compte_motdepasse">Mot de passe</string>
    <string name="label_compte_conf_motdepasse">Confirmation du mot de passe</string>
    <string name="label_compte_email">Adresse mail</string>
    <string name="label_compte_age">Âge</string>
    <string name="label_compte_domicile">Adresse Personnelle</string>
    <string name="label_compte_niveau">Niveau physique</string>
    <string name="label_compte_morphologie">Morphologie</string>

    <!-- Page compte utilisateur -->
    <string name="titre_page_compte_utilisateur">Mon compte</string>
    <string name="bouton_compte_modifier">Modifier mes informations</string>
    <string name="bouton_compte_valider">Valider les changements</string>
    <string name="bouton_compte_annuler">Annuler les changements</string>

    <!-- Liés aux informations de la randonnée -->
    <string name="nom_randonnee">Nom de la randonnée</string>
    <string name="duree_jours">Durée de la randonnée en jours</string>
    <string name="texte_randonee">Liste des randonnées</string>
    <string name="details_randonnee">Détails de la randonnée</string>

    <!-- Liés aux informations du parcours -->
    <string name="texte_parcours">Liste des parcours</string>
    <string name="details_parcours">Détails du parcours</string>
    <string name="nom_parcours">Nom du parcours</string>

    <string name="asterix">*</string>

    <!-- Labels boutons -->
    <string name="label_btn_creercompte">Créer un compte</string>
    <string name="label_btn_confirmation_creation_compte">Confirmer la création du compte</string>
    <string name="label_btn_se_connecter">Se connecter</string>
    <string name="label_btn_visualiser_rando">Visualiser la randonnée</string>
    <string name="confirmer">Confirmer</string>
    <string name="ajouter">Ajouter</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="details">Détails…</string>
    <string name="voir_liste_parcours">Voir la liste des parcours</string>
    <string name="voir_liste_participants">Voir la liste des participants</string>
    <string name="bouton_carte_parcours">Voir la carte du parcours</string>
    <string name="depart">Placer le point de départ</string>
    <string name="arrivee">Placer le point d\'arrivée</string>
    <string name="arrivee_depart">Placer un point commun</string>
    <string name="arrivee_depart_actif">Mode arrivée départ commun</string>

    <!-- Descriptions edit text -->
    <string name="description_nom">Marcel</string>
    <string name="description_prenom">Marcenac</string>
    <string name="description_email">m.marcenac@email.com</string>
    <string name="description_motdepasse">mdp_secure1234</string>
    <string name="description_age">20</string>
    <string name="description_domicile">7 rue du Citron</string>
    <string name="description_patronyme">Marcel Marcenac</string>
    <string name="texte_participants">Liste des participants</string>
    <string name="liste_participants_rando">Liste des participants</string>
    <string name="options_randonneur">Options randonneur</string>
    <string name="se_deconnecter">Se déconnecter</string>
    <string name="placeholder_nom_randonnee">Écrivez le nom de la randonnee</string>
    <string name="placeholder_nb_max_personne">Entrez un nombre entre 1 et 3</string>
    <string name="placeholder_nom_parcours">Écrivez le nom du parcours</string>

    <!-- Spinners -->

    <string-array name="spinner_niveau_physique">
        <item name="debutant">Débutant</item>
        <item name="entraine">Entrainé</item>
        <item name="sportif">Sportif</item>
    </string-array>

    <string-array name="spinner_morphologie">
        <item name="leger">Léger</item>
        <item name="moyen">Moyen</item>
        <item name="fort">Fort</item>
    </string-array>

    <!-- Carte -->
    <string name="avertissement_point_interet">
        "Vous êtes à moins de 200m d'un point d'intérêt !"
    </string>
    <string name="mise_en_pause_parcours">Le parcours a été mis en pause.</string>
    <string name="demarrage_parcours">Démarrage / continuation de la randonnée</string>
    <string name="mise_en_arret_parcours">Arrêt de la randonnée</string>
    <string name="centrer_carte_randonneur">Centrer la carte sur Vous</string>
    <string name="centrer_carte_parcours">Centrer la carte sur le parcours</string>

    <!-- Informations carte -->

    <string name="label_carte_randonnee">Randonnée</string>
    <string name="date_carte_parcours_formatage">Parcours crée le : %s</string>
    <string name="label_point_interet_proche">"Distance du Point D'intérêt le plus Proche"</string>
    <string name="distance_point_interet_proche_formatage">"%s m"</string>
    <string name="label_participants_carte">Participants</string>
    <string name="label_status_parcours">Status Parcours</string>

    <!-- Messages succès -->

    <string name="message_succes_creation_compte">"Votre compte a été crée avec succès.\nBienvenue, %s !"</string>
    <string name="message_succes_modification_compte">"Les informations modifiées ont bien été prises en compte."</string>

    <!-- Messages d'erreur -->

    <string name="message_erreur_nom">Veuillez insérer votre nom.</string>
    <string name="message_erreur_prenom">Veuillez insérer votre prénom.</string>
    <string name="message_erreur_nom_prenom">Veuillez insérer votre prénom et votre nom.</string>
    <string name="message_erreur_mdp">Veuillez insérer un mot de passe.</string>
    <string name="message_erreur_confirmation_mdp">Veuillez confirmer votre mot de passe.</string>
    <string name="message_erreur_mdp_conf_echec">"La confirmation du mot de passe à échouer, faite en sorte à ce qu'il corresponde à votre mot de passe initial."</string>
    <string name="message_erreur_age">Veuillez indiquer votre âge dans la tranche 1 – 120.</string>
    <string name="message_erreur_mail_vide">Votre adresse mail est vide.</string>
    <string name="message_erreur_mail_incorrecte">
        "Votre adresse mail est mal formée,
        veuillez écrire un mail de la forme 'm.marcenac@email.com'."
    </string>
    <string name="message_erreur_adresse">Veuillez insérer votre adresse personnelle.</string>

</resources>