<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="35dp"
    android:layout_marginRight="35dp"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:orientation="vertical"
        android:stretchColumns="1,2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageUtilisateur"
                android:layout_width="225dp"
                android:layout_height="163dp"
                android:src="@drawable/randonneur_photo" />

            <TextView
                android:id="@+id/patronyme_utilisateur_titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Marcel "
                android:textSize="40dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mon Compte"
                android:textSize="50dp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="Patronyme" />

            <EditText
                android:id="@+id/nomUtilisateur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/description_patronyme" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/label_compte_motdepasse" />

            <EditText
                android:id="@+id/motDePasseUtilisateur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:hint="@string/description_motdepasse"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/label_compte_conf_motdepasse" />

            <EditText
                android:id="@+id/champConfirmationMotDePasse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.3"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/description_motdepasse"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/label_compte_email" />

            <EditText
                android:id="@+id/emailUtilisateur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:hint="@string/description_email" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/label_compte_domicile" />

            <EditText
                android:id="@+id/domicileUtilisateur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:hint="@string/description_domicile" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/label_compte_niveau" />

            <Spinner
                android:id="@+id/niveauUtilisateur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/label_compte_morphologie" />

            <Spinner
                android:id="@+id/spinnerMorphologie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/label_compte_age" />

            <EditText
                android:id="@+id/champAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/description_age"
                android:inputType="numberSigned"
                android:maxLength="120" />

            <Button
                android:id="@+id/valider_changements_compte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/vert_pomme"
                android:text="Valider les changements"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/modifier_compte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/vert_pomme"
                android:text="Modifier le compte"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/annuler_changements_compte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/vert_pomme"
                android:text="Annuler les changements"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/ecran_chargement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:alpha="1"
        android:background="@color/ecran_chargement"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <pl.droidsonroids.gif.GifTextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/chargement"
            android:gravity="center" />
    </LinearLayout>

</FrameLayout>